finished midterm pract and some more work on lab 4

--- a/labs/lab04/lab_04.ipynb
+++ b/labs/lab04/lab_04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "evalue": "invalid syntax (2775680049.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 1\u001b[0;36m\u001b[0m\n",
+      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 1\u001b[0;36m\u001b[0m\n",
       "\u001b[0;31m    ---\u001b[0m\n",
       "\u001b[0m       ^\u001b[0m\n",
       "\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,6 +668,236 @@
     "\n",
     "#Merge with merged_df on state\n",
     "final_df = pd.merge(merged_df, region_df, how='outer', on=['state'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Analyze**\n",
+    "\n",
+    "Assess and comment on the prevalence of each chain. Some questions to consider (you don’t need to answer all of these and you may come up with your own):\n",
+    "\n",
+    "- Are some of these chains more prevalent in certain states than others? Possibly despite having less stores overall? Same questions for regions instead of states.\n",
+    "\n",
+    "- How does your chosen financial metric change by state and region for each chain? For example, having 5 stores in California is very different from having 5 stores in Wyoming.\n",
+    "\n",
+    "- Does the distribution of each chain’s stores match population distribution, by both state/region?\n",
+    "\n",
+    "- Do the financial data match what you’d expect based on the number and locations of the stores? Why or why not?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Automate**\n",
+    "\n",
+    "Convert your code for Exercises 1-3 above to a function that takes a single argument: the URL. This function should:\n",
+    "\n",
+    "- Scrape the information on state names and corresponding number of store locations on the webpage specified (assume the page has a table in the same form and placement as the ones you scraped above)\n",
+    "\n",
+    "- Extract the name of the company from either the URL specified or the webpage (assume the URL will have the same format as the ones used above)\n",
+    "\n",
+    "- Return a clean, organized and tidy dataset. Find a page other than Starbucks and Dunkin’ Donuts to test this on to confirm that it works. It’s fine if this is not related to coffee."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#I decided to do this down here and not change anything from above:\n",
+    "def get_info(url):\n",
+    "\n",
+    "    #requests\n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    #soup\n",
+    "    soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "    \n",
+    "    #gets html for company name\n",
+    "    text = soup.find(\"div\",\n",
+    "                    attrs={\n",
+    "                      \"class\": \"actionbar-title m-0 flex-1 px-2 py-2\"}\n",
+    "                  )\n",
+    "    #finds text tag\n",
+    "    company_name_tag = text.find(\"h2\")\n",
+    "    #strips\n",
+    "    company_name = company_name_tag.text.strip()\n",
+    "    #removes everything except company name\n",
+    "    #Refrenced CHAT GPT for line below:\n",
+    "    company_name = company_name.split('Stores')[0].strip()\n",
+    "\n",
+    "\n",
+    "    #table (dont want table to be a list)\n",
+    "    table = soup.find(\"table\",\n",
+    "                    attrs={\n",
+    "                      \"class\": \"wpr-table\"}\n",
+    "                  )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_table(table):\n",
+    "\n",
+    "    #need to get table heads to see how many columns there actually are.\n",
+    "    for columns in table.find_all(\"th\")[0:]:\n",
+    "\n",
+    "        cells_col = columns.find_all(\"thead\")\n",
+    "\n",
+    "        state = cells_col\n",
+    "    \n",
+    "\n",
+    "    #scrape table\n",
+    "    rows = []\n",
+    "\n",
+    "    for state in table.find_all(\"tr\")[1:]:\n",
+    "\n",
+    "        cells_state = table.find_all(\"th\")\n",
+    "        cells_obs = table.find_all(\"td\")\n",
+    "        \n",
+    "        #state\n",
+    "        state_tag = cells_state[0].find(\"a\") or cells_state[0]\n",
+    "        state = state_tag.text.strip()\n",
+    "\n",
+    "        #find # stores in 2023\n",
+    "        stores_2023_tag = cells_obs[0].find(\"td\") or cells_obs[0]\n",
+    "        stores_2023 = stores_2023_tag.text.strip()\n",
+    "\n",
+    "        #find # stores in 2021\n",
+    "        stores_2021_tag = cells_obs[1].find(\"td\") or cells_obs[1]\n",
+    "        stores_2021 = stores_2021_tag.text.strip()\n",
+    "\n",
+    "        #find # stores in 2024\n",
+    "        stores_2024_tag = cells_obs[2].find(\"td\") or cells_obs[2]\n",
+    "        stores_2024 = stores_2024_tag.text.strip()\n",
+    "\n",
+    "\n",
+    "        # Append this data.\n",
+    "        rows.append({\n",
+    "                \"state\": state,\n",
+    "                \"2023\": stores_2023,\n",
+    "                \"2021\": stores_2021,\n",
+    "                \"2024\": stores_2024\n",
+    "        })\n",
+    "\n",
+    "\n",
+    "    df = pd.DataFrame(rows)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['State', 'Starbucks Stores 2023', 'Starbucks Stores 2021',\n",
+      "       'Starbucks Stores 2024'],\n",
+      "      dtype='object')\n",
+      "Index(['State', 'Starbucks Stores 2023', 'Starbucks Stores 2021',\n",
+      "       'Starbucks Stores 2024'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming 'table' is the BeautifulSoup object representing the table\n",
+    "cols = []\n",
+    "\n",
+    "# Find all table headers (th elements)\n",
+    "for columns in table.find_all(\"th\"):\n",
+    "    # Get the text from each header and strip any leading/trailing spaces\n",
+    "    header_text = columns.get_text(strip=True)\n",
+    "    \n",
+    "    # Append each header to the cols list\n",
+    "    cols.append(header_text)\n",
+    "\n",
+    "# List of state names to filter out\n",
+    "states = ['California', 'Texas', 'Florida', 'Washington', 'New York', 'Illinois', 'Arizona', \n",
+    "          'Colorado', 'Ohio', 'Virginia', 'Oregon', 'Pennsylvania', 'North Carolina', \n",
+    "          'Georgia', 'Michigan', 'Massachusetts', 'New Jersey', 'Maryland', 'Nevada', \n",
+    "          'Indiana', 'Missouri', 'Minnesota', 'Tennessee', 'Kentucky', 'Wisconsin', \n",
+    "          'South Carolina', 'Connecticut', 'Utah', 'Hawaii', 'Kansas', 'District of Columbia', \n",
+    "          'Iowa', 'Alabama', 'Louisiana', 'Oklahoma', 'New Mexico', 'Idaho', 'Nebraska', \n",
+    "          'Arkansas', 'Alaska', 'Mississippi', 'Montana', 'Maine', 'New Hampshire', \n",
+    "          'Rhode Island', 'Delaware', 'South Dakota', 'West Virginia', 'Wyoming', \n",
+    "          'North Dakota', 'Vermont']\n",
+    "\n",
+    "# Filter out columns that match any state name\n",
+    "filtered_cols = [col for col in cols if col not in states]\n",
+    "\n",
+    "# Convert the filtered list of column headers into a DataFrame\n",
+    "df = pd.DataFrame(columns=filtered_cols)\n",
+    "\n",
+    "# Display the resulting DataFrame columns\n",
+    "print(df.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Starbucks'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#unit test\n",
+    "\n",
+    "get_info(\"https://worldpopulationreview.com/state-rankings/starbucks-stores-by-state\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    #requests\n",
+    "    response = requests.get(\"https://worldpopulationreview.com/state-rankings/starbucks-stores-by-state\")\n",
+    "\n",
+    "    #soup\n",
+    "    soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "    \n",
+    "    #gets html for company name\n",
+    "    text = soup.find(\"div\",\n",
+    "                    attrs={\n",
+    "                      \"class\": \"actionbar-title m-0 flex-1 px-2 py-2\"}\n",
+    "                  )\n",
+    "    #finds text tag\n",
+    "    company_name_tag = text.find(\"h2\")\n",
+    "    #strips\n",
+    "    company_name = company_name_tag.text.strip()\n",
+    "    #removes everything except company name\n",
+    "    #Refrenced CHAT GPT for line below:\n",
+    "    company_name = company_name.split('Stores')[0].strip()\n",
+    "\n",
+    "\n",
+    "    #table (dont want table to be a list)\n",
+    "    table = soup.find(\"table\",\n",
+    "                    attrs={\n",
+    "                      \"class\": \"wpr-table\"}\n",
+    "                  )"
    ]
   }
  ],
