few changes made to part 8

--- a/labs/lab04/lab_04.ipynb
+++ b/labs/lab04/lab_04.ipynb
@@ -1,22 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2775680049.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 1\u001b[0;36m\u001b[0m\n",
-      "\u001b[0;31m    ---\u001b[0m\n",
-      "\u001b[0m       ^\u001b[0m\n",
-      "\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
     }
-   ],
+   },
    "source": [
     "---\n",
     "\n",
@@ -32,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,56 +725,63 @@
     "    table = soup.find(\"table\",\n",
     "                    attrs={\n",
     "                      \"class\": \"wpr-table\"}\n",
-    "                  )\n"
+    "                  )\n",
+    "\n",
+    "    num_cols = get_cols(table)\n",
+    "\n",
+    "    data = get_table(table, num_cols)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1207576460.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[49], line 3\u001b[0;36m\u001b[0m\n",
+      "\u001b[0;31m    cols =\u001b[0m\n",
+      "\u001b[0m           ^\u001b[0m\n",
+      "\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_table(table):\n",
-    "\n",
-    "    #need to get table heads to see how many columns there actually are.\n",
-    "    for columns in table.find_all(\"th\")[0:]:\n",
-    "\n",
-    "        cells_col = columns.find_all(\"thead\")\n",
-    "\n",
-    "        state = cells_col\n",
-    "    \n",
+    "def get_table(table, num_cols):\n",
     "\n",
     "    #scrape table\n",
     "    rows = []\n",
     "\n",
+    "    #each row\n",
     "    for state in table.find_all(\"tr\")[1:]:\n",
     "\n",
     "        cells_state = table.find_all(\"th\")\n",
     "        cells_obs = table.find_all(\"td\")\n",
-    "        \n",
-    "        #state\n",
-    "        state_tag = cells_state[0].find(\"a\") or cells_state[0]\n",
+    "\n",
+    "        #gets state\n",
+    "        state_tag = cells_state[i].find(\"th\") or cells_state[0]\n",
     "        state = state_tag.text.strip()\n",
     "\n",
-    "        #find # stores in 2023\n",
-    "        stores_2023_tag = cells_obs[0].find(\"td\") or cells_obs[0]\n",
-    "        stores_2023 = stores_2023_tag.text.strip()\n",
+    "        #for i cols after state\n",
+    "        for i in num_cols\n",
     "\n",
-    "        #find # stores in 2021\n",
-    "        stores_2021_tag = cells_obs[1].find(\"td\") or cells_obs[1]\n",
-    "        stores_2021 = stores_2021_tag.text.strip()\n",
-    "\n",
-    "        #find # stores in 2024\n",
-    "        stores_2024_tag = cells_obs[2].find(\"td\") or cells_obs[2]\n",
-    "        stores_2024 = stores_2024_tag.text.strip()\n",
+    "            #state\n",
+    "            state_tag = cells_state[i].find(\"td\") or cells_state[i]\n",
+    "            state = state_tag.text.strip()\n",
     "\n",
     "\n",
-    "        # Append this data.\n",
+    "            # Append this data.\n",
+    "            rows.append({\n",
+    "                i: stores_2023,\n",
+    "                i: stores_2021,\n",
+    "                i: stores_2024\n",
+    "            })\n",
+    "\n",
     "        rows.append({\n",
-    "                \"state\": state,\n",
-    "                \"2023\": stores_2023,\n",
-    "                \"2021\": stores_2021,\n",
-    "                \"2024\": stores_2024\n",
+    "            state\n",
     "        })\n",
     "\n",
     "\n",
@@ -794,66 +791,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['State', 'Starbucks Stores 2023', 'Starbucks Stores 2021',\n",
-      "       'Starbucks Stores 2024'],\n",
-      "      dtype='object')\n",
-      "Index(['State', 'Starbucks Stores 2023', 'Starbucks Stores 2021',\n",
-      "       'Starbucks Stores 2024'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "#**This chunk gets the number of columns that we will need to scrape\n",
+    "def get_cols(table):\n",
     "\n",
-    "# Assuming 'table' is the BeautifulSoup object representing the table\n",
-    "cols = []\n",
+    "    import pandas as pd\n",
     "\n",
-    "# Find all table headers (th elements)\n",
-    "for columns in table.find_all(\"th\"):\n",
-    "    # Get the text from each header and strip any leading/trailing spaces\n",
-    "    header_text = columns.get_text(strip=True)\n",
-    "    \n",
-    "    # Append each header to the cols list\n",
-    "    cols.append(header_text)\n",
+    "    # Assuming 'table' is the BeautifulSoup object representing the table\n",
+    "    cols = []\n",
     "\n",
-    "# List of state names to filter out\n",
-    "states = ['California', 'Texas', 'Florida', 'Washington', 'New York', 'Illinois', 'Arizona', \n",
-    "          'Colorado', 'Ohio', 'Virginia', 'Oregon', 'Pennsylvania', 'North Carolina', \n",
-    "          'Georgia', 'Michigan', 'Massachusetts', 'New Jersey', 'Maryland', 'Nevada', \n",
-    "          'Indiana', 'Missouri', 'Minnesota', 'Tennessee', 'Kentucky', 'Wisconsin', \n",
-    "          'South Carolina', 'Connecticut', 'Utah', 'Hawaii', 'Kansas', 'District of Columbia', \n",
-    "          'Iowa', 'Alabama', 'Louisiana', 'Oklahoma', 'New Mexico', 'Idaho', 'Nebraska', \n",
-    "          'Arkansas', 'Alaska', 'Mississippi', 'Montana', 'Maine', 'New Hampshire', \n",
-    "          'Rhode Island', 'Delaware', 'South Dakota', 'West Virginia', 'Wyoming', \n",
-    "          'North Dakota', 'Vermont']\n",
+    "    # Find all table headers (th elements)\n",
+    "    for columns in table.find_all(\"th\"):\n",
+    "        # Get the text from each header and strip any leading/trailing spaces\n",
+    "        header_text = columns.get_text(strip=True)\n",
+    "        \n",
+    "        # Append each header to the cols list\n",
+    "        cols.append(header_text)\n",
     "\n",
-    "# Filter out columns that match any state name\n",
-    "filtered_cols = [col for col in cols if col not in states]\n",
+    "    # List of state names to filter out\n",
+    "    states = ['State', 'California', 'Texas', 'Florida', 'Washington', 'New York', 'Illinois', 'Arizona', \n",
+    "            'Colorado', 'Ohio', 'Virginia', 'Oregon', 'Pennsylvania', 'North Carolina', \n",
+    "            'Georgia', 'Michigan', 'Massachusetts', 'New Jersey', 'Maryland', 'Nevada', \n",
+    "            'Indiana', 'Missouri', 'Minnesota', 'Tennessee', 'Kentucky', 'Wisconsin', \n",
+    "            'South Carolina', 'Connecticut', 'Utah', 'Hawaii', 'Kansas', 'District of Columbia', \n",
+    "            'Iowa', 'Alabama', 'Louisiana', 'Oklahoma', 'New Mexico', 'Idaho', 'Nebraska', \n",
+    "            'Arkansas', 'Alaska', 'Mississippi', 'Montana', 'Maine', 'New Hampshire', \n",
+    "            'Rhode Island', 'Delaware', 'South Dakota', 'West Virginia', 'Wyoming', \n",
+    "            'North Dakota', 'Vermont']\n",
     "\n",
-    "# Convert the filtered list of column headers into a DataFrame\n",
-    "df = pd.DataFrame(columns=filtered_cols)\n",
+    "    # Filter out columns that match any state name\n",
+    "    filtered_cols = [col for col in cols if col not in states]\n",
     "\n",
-    "# Display the resulting DataFrame columns\n",
-    "print(df.columns)\n"
+    "    # Convert the filtered list of column headers into a DataFrame\n",
+    "    df = pd.DataFrame(columns=filtered_cols)\n",
+    "\n",
+    "    #length of columns\n",
+    "    col_length = len(df.columns)\n",
+    "\n",
+    "    return(col_length)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Starbucks'"
+       "3"
       ]
      },
      "execution_count": null,
@@ -862,6 +851,17 @@
     }
    ],
    "source": [
+    "#unit test for get_cols\n",
+    "\n",
+    "get_cols(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#unit test\n",
     "\n",
     "get_info(\"https://worldpopulationreview.com/state-rankings/starbucks-stores-by-state\")"
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
