finished practice activity pipelines

--- a/class_practice/pipelines/pipelines.ipynb
+++ b/class_practice/pipelines/pipelines.ipynb
@@ -47,10 +47,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**Did this practice activity using cross validation and using neg_root_mean_squared_error and then multiplying by -1 to make positive**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "76937.02534563109"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#model1\n",
     "#using only size and num rooms\n",
@@ -73,19 +91,177 @@
     "  [(\"preprocessing\", ct),\n",
     "  (\"linear_regression\", LinearRegression())]\n",
     ").set_output(transform=\"pandas\")\n",
-    "\n"
+    "\n",
+    "scores = cross_val_score(lr_pipeline_1, X, y, cv=5, scoring='neg_root_mean_squared_error')\n",
+    "scores.mean()*-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74930.59601231787"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#model2\n",
+    "#using size, num rooms, building type\n",
+    "\n",
+    "#pick only LotArea and Bedroom\n",
+    "#X = ames.drop(\"SalePrice\", axis = 1)\n",
+    "X = ames[[\"Lot Area\", \"Bedroom AbvGr\", \"Bldg Type\"]]\n",
+    "y = ames[\"SalePrice\"]\n",
+    "\n",
+    "\n",
+    "ct = ColumnTransformer(\n",
+    "  [\n",
+    "    (\"dummify\", OneHotEncoder(sparse_output = False), [\"Bldg Type\"]),\n",
+    "    (\"standardize\", StandardScaler(), [\"Lot Area\", \"Bedroom AbvGr\"])\n",
+    "  ],\n",
+    "  remainder = \"drop\"\n",
+    ")\n",
+    "\n",
+    "lr_pipeline_1 = Pipeline(\n",
+    "  [(\"preprocessing\", ct),\n",
+    "  (\"linear_regression\", LinearRegression())]\n",
+    ").set_output(transform=\"pandas\")\n",
+    "\n",
+    "\n",
+    "scores = cross_val_score(lr_pipeline_1, X, y, cv=5, scoring='neg_root_mean_squared_error')\n",
+    "scores.mean()*-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77284.27428047506"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#model3\n",
+    "#using size, building type, interaction\n",
+    "\n",
+    "#pick only LotArea and Bedroom\n",
+    "#X = ames.drop(\"SalePrice\", axis = 1)\n",
+    "X = ames[[\"Lot Area\", \"Bldg Type\"]]\n",
+    "y = ames[\"SalePrice\"]\n",
+    "\n",
+    "\n",
+    "ct = ColumnTransformer(\n",
+    "  [\n",
+    "    (\"dummify\", OneHotEncoder(sparse_output = False), [\"Bldg Type\"]),\n",
+    "    (\"standardize\", StandardScaler(), [\"Lot Area\"])\n",
+    "  ],\n",
+    "  remainder = \"drop\"\n",
+    ")\n",
+    "\n",
+    "ct_inter = ColumnTransformer(\n",
+    "  [\n",
+    "    (\"interaction\", PolynomialFeatures(interaction_only = True), [\"standardize__Lot Area\", \"dummify__Bldg Type_1Fam\"]),\n",
+    "  ],\n",
+    "  remainder = \"drop\"\n",
+    ").set_output(transform = \"pandas\")\n",
+    "\n",
+    "\n",
+    "lr_pipeline_1 = Pipeline(\n",
+    "  [(\"preprocessing\", ct),\n",
+    "  (\"interaction\", ct_inter),\n",
+    "  (\"linear_regression\", LinearRegression())]\n",
+    ").set_output(transform=\"pandas\")\n",
+    "\n",
+    "#check to see what names the transformed variables are\n",
+    "#X_train_dummified = ct.fit_transform(X)\n",
+    "#X_train_dummified\n",
+    "\n",
+    "scores = cross_val_score(lr_pipeline_1, X, y, cv=5, scoring='neg_root_mean_squared_error')\n",
+    "scores.mean()*-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "114106.82071091366"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#model4\n",
+    "#Using a 5-degree polynomial on size, a 5-degree polynomial on number of rooms, and also building type.\n",
+    "\n",
+    "#pick only LotArea and Bedroom\n",
+    "#X = ames.drop(\"SalePrice\", axis = 1)\n",
+    "X = ames[[\"Lot Area\", \"Bedroom AbvGr\", \"Bldg Type\"]]\n",
+    "y = ames[\"SalePrice\"]\n",
+    "\n",
+    "\n",
+    "ct = ColumnTransformer(\n",
+    "  [\n",
+    "    (\"dummify\", OneHotEncoder(sparse_output = False), [\"Bldg Type\"]),\n",
+    "    (\"standardize\", StandardScaler(), [\"Lot Area\", \"Bedroom AbvGr\"])\n",
+    "  ],\n",
+    "  remainder = \"drop\"\n",
+    ")\n",
+    "\n",
+    "ct_degree = ColumnTransformer(\n",
+    "  [\n",
+    "    (\"polynomial_lot\", PolynomialFeatures(degree = 5), [\"standardize__Lot Area\"]),\n",
+    "    (\"polynomial_bedroom\", PolynomialFeatures(degree = 5), [\"standardize__Bedroom AbvGr\"]),\n",
+    "  ],\n",
+    "  remainder = \"drop\"\n",
+    ").set_output(transform = \"pandas\")\n",
+    "\n",
+    "lr_pipeline_1 = Pipeline(\n",
+    "  [(\"preprocessing\", ct),\n",
+    "  (\"poly\", ct_degree),\n",
+    "  (\"linear_regression\", LinearRegression())]\n",
+    ").set_output(transform=\"pandas\")\n",
+    "\n",
+    "#check to see what names the transformed variables are\n",
+    "#X_train_dummified = ct.fit_transform(X)\n",
+    "#X_train_dummified\n",
+    "\n",
+    "scores = cross_val_score(lr_pipeline_1, X, y, cv=5, scoring='neg_root_mean_squared_error')\n",
+    "scores.mean()*-1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**DID this for cross_validation only the first 4 models though**"
+    "**DID this for cross_validation aswell using R^2**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
