finished practice activity 8.1

--- a/practice_activities/7.1_penalized regression/penalized_regression.ipynb
+++ b/practice_activities/7.1_penalized regression/penalized_regression.ipynb
@@ -63,9 +63,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ames' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n",
+      "\u001b[0;32m----> 1\u001b[0m X \u001b[38;5;241m=\u001b[39m ames\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSalePrice\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOrder\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPID\u001b[39m\u001b[38;5;124m\"\u001b[39m], axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;32m      2\u001b[0m y \u001b[38;5;241m=\u001b[39m ames[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSalePrice\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[1;32m      5\u001b[0m ct \u001b[38;5;241m=\u001b[39m ColumnTransformer(\n",
+      "\u001b[1;32m      6\u001b[0m   [\n",
+      "\u001b[1;32m      7\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdummify\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n",
+      "\u001b[0;32m   (...)\u001b[0m\n",
+      "\u001b[1;32m     15\u001b[0m   remainder \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpassthrough\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;32m     16\u001b[0m )\n",
+      "\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ames' is not defined"
+     ]
+    }
+   ],
    "source": [
     "X = ames.drop([\"SalePrice\", \"Order\", \"PID\"], axis = 1)\n",
     "y = ames[\"SalePrice\"]\n",
