--- a/practice_activities/8.1_nonparametric_regression/practice_activity_nonparametric.ipynb
+++ b/practice_activities/8.1_nonparametric_regression/practice_activity_nonparametric.ipynb
@@ -90,17 +90,20 @@
     "    (\"linear_regression\", LinearRegression())\n",
     "])\n",
     "\n",
-    "# k-Nearest Neighbors with k=3 and k=5\n",
+    "# kNN pipelin\n",
+    "# k=3\n",
     "knn3_pipeline = Pipeline([\n",
     "    (\"preprocessing\", ct),\n",
     "    (\"knn\", KNeighborsRegressor(n_neighbors=3))\n",
     "])\n",
+    "\n",
+    "# k=5\n",
     "knn5_pipeline = Pipeline([\n",
     "    (\"preprocessing\", ct),\n",
     "    (\"knn\", KNeighborsRegressor(n_neighbors=5))\n",
     "])\n",
     "\n",
-    "# Decision Tree\n",
+    "# decision Tree\n",
     "dt_pipeline = Pipeline([\n",
     "    (\"preprocessing\", ct),\n",
     "    (\"decision_tree\", DecisionTreeRegressor())\n",
