finished practice activity 9.2

--- a/labs/lab07/lab_07.ipynb
+++ b/labs/lab07/lab_07.ipynb
@@ -840,7 +840,9 @@
     "    (\"interaction\", ct_inter),\n",
     "    #assuming that we dont need to tune logistic regression?\n",
     "    (\"logistic_regression\", LogisticRegression())\n",
-    "]).set_output(transform = \"pandas\")"
+    "]).set_output(transform = \"pandas\")\n",
+    "\n",
+    "#some penalizing parameter"
    ]
   },
   {
@@ -1542,7 +1544,9 @@
     "    (\"interaction\", ct_inter),\n",
     "    #assuming that we dont need to tune logistic regression?\n",
     "    (\"decision_tree_classifier\", DecisionTreeClassifier())\n",
-    "]).set_output(transform = \"pandas\")"
+    "]).set_output(transform = \"pandas\")\n",
+    "\n",
+    "#tune using ccp_alpha"
    ]
   },
   {
